<resources>
    <string name="app_name">Mobile Shop App</string>
    <string name="view_cart_label">View Cart</string>
    <string name="add_to_cart_label">Add to Cart</string>
    <string name="decrement_label">-</string>
    <string name="increment_label">+</string>
    <string name="cart_header_label">Order Summary</string>
    <string name="add_more_label">Add More</string>
    <string name="checkout_label">Checkout</string>
    <string name="test_string">Test Total</string>
    <string name="delivery_info_label">Delivery Information</string>
    <string name="contact_number">Contact Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="baranggay">Baranggay</string>
    <string name="landmarks">Landmarks</string>
    <string name="additional_notes_request">Additional Notes/Request</string>
    <string name="confirm_delivery_information">Checkout</string>
    <string name="view_shop">View Shops</string>
</resources>